tests/ui/macros/macro-path-prelude-fail-3.rs
fn main() {
    inline!(); //~ ERROR cannot find macro `inline`
}
